--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-Flask==2.3.3
-opencv-python==4.8.1.78
-mediapipe==0.10.8
-Pillow==10.0.1
-numpy==1.24.3
-Werkzeug==2.3.7
+Flask==3.0.0
+opencv-python-headless==4.9.0.80
+mediapipe>=0.10.0
+Pillow>=10.0.0
+numpy>=1.24.0
+Werkzeug>=2.3.0
+gunicorn>=21.0.0
