--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==3.0.0
-opencv-python-headless==4.5.5.64
-mediapipe==0.9.3.0
-numpy==1.24.3
+opencv-python-headless>=4.8.1
+Pillow>=10.0.1
+numpy>=1.24.3
+Werkzeug==2.3.7
 gunicorn==21.2.0
-Pillow==10.0.0
+mediapipe>=0.10.5
