--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["kotor-1 <your.email@example.com>"]
 python = "^3.13"
 Flask = "3.0.0"
 gunicorn = "21.2.0"
-Pillow = "10.0.0"  # 古いバージョンを指定
+Pillow = "9.5.0"  # より古いバージョンに変更
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
