--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: crouch-analyzer-pro
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python -m gunicorn app:app
+    startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
-        value: 3.13.4
+        value: 3.9
