--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-﻿Flask==3.0.0
+Flask==3.0.0
 gunicorn==21.2.0
-Pillow==10.3.0
+Pillow>=10.0.0,<11.0.0
+opencv-python>=4.8.0
+mediapipe>=0.10.0
+numpy>=1.24.0
